# Task-manager

./: .env_example  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  db.sqlite3  pyproject.toml  setup.cfg
.github/workflows/: Task_manager.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: asgi.py  settings.py  urls.py  view.py  views.py  wsgi.py
task_manager/common/: base_repositories.py  base_service.py  mixin.py  models.py  utils.py
task_manager/labels/: admin.py  form.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: admin.py  form.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: admin.py  filters.py  form.py  models.py  urls.py  views.py
task_manager/tasks/entities/: converters.py  label_entity.py  status_entity.py  task_entity.py
task_manager/tasks/exceptions/: label_exceptions.py  status_exceptions.py  task_exceptions.py
task_manager/tasks/forms/: label_form.py  status_form.py  task_form.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_status_created_at_alter_status_updated_at.py  0002_initial.py  0003_rename_label_task_labels.py  0003_task.py  0004_alter_task_labels.py  0004_task_description.py  0005_remove_task_labels_task_label.py  0005_rename_performer_task_executor.py  0006_label_rename_title_status_name_membership_task_label.py  0006_remove_task_label_task_labels.py  0006_rename_title_status_name.py  0007_label_task_label.py  0007_remove_task_labels_remove_membership_label_and_more.py  0008_initial.py  0009_rename_membership_tasklabels_and_more.py
task_manager/tasks/models/: __init__.py  label_model.py  status_model.py  task_model.py
task_manager/templates/: index.html  some.html
task_manager/users/: admin.py  entities.py  exceptions.py  form.py  models.py  urls.py  user_repository.py  user_service.py  utils.py  views.py
tests/factories/: labels.py  statuses.py  tasks.py  users.py
tests/fixtures/: auth_service.py  login_decorator.py  user_service.py
tests/services/: test_auth.py  test_labels.py  test_statuses.py  test_task_filter.py  test_tasks.py  test_users.py
tests/views/: test_labels_views.py  test_statuses_views.py  test_tasks_views.py  test_users_views.py
(+53 files in other folders)
