[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Konstantin Kiselev <konstantin.kiselev.1998@mail.ru>"]
readme = "README.md"
packages = [
  { include = "task_manager" },
]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.1"
python-dotenv = "^1.0.1"
django-stubs = "^5.0.4"
gunicorn = "^23.0.0"
django-bootstrap5 = "^24.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
django-extensions = "^3.2.3"
ipython = "^8.27.0"
django-debug-toolbar = "^4.4.6"
whitenoise = "^6.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
